--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p>I am A Web Developer, Which Means I Know How to Make thing Work on the internet I know about Html CSS and JavaScript 
                         Which helps create a Cool things that you can see and use on the website I also Know about Java its DSA which  Sounds Complicated but, 
                         It helps me solve a particular problem and make things work better..!!!</p>
-                    <a href="file:///C:/Users/Dell/Desktop/KHUSHBU_HAMEED.pdf">Download CV</a>
+                    <a href="file:///C:/Users/Dell/Desktop/KHUSHBU_HAMEED.pdf">Resume</a>
                 </div>
             </div>
         </div>
